# sloppy-jobulator

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.agent/: CONTEXT.md  CONTINUITY.md  DECISIONS.md  PATTERNS.md  RUNBOOK.md
.agent/execplans/: INDEX.md
.agent/helpers/: H-2026-02-10__db-integration-escalation.md  H-2026-02-12__async-resource-loop-lifecycle.md  INDEX.md
.agent/notes/: 2026-02-08_bootstrap-foundation-v1.md  (+28 more)
.github/workflows/: ci.yml  (+2 more)
api/: pyproject.toml
api/app/: main.py
api/app/api/: router.py
api/app/api/routes/: admin.py  candidates.py  discoveries.py  evidence.py  health.py  jobs.py  postings.py
api/app/core/: auth.py  config.py  security.py  telemetry.py  urls.py
api/app/schemas/: admin.py  candidates.py  discoveries.py  evidence.py  jobs.py  postings.py
api/app/services/: dedupe.py  repository.py  store.py
api/tests/: test_bootstrap_admin_script.py  test_candidates_authz.py  test_dedupe_scorer.py  test_discovery_jobs_integration.py  test_health.py  test_source_trust_policy_rules_validation.py  test_urls.py
db/: schema_v1.sql
docs/: ARCHITECTURE.md  ENVIRONMENT_BINDINGS.md  TRANSFER_README.md
handoff/: IMPLEMENTATION_PLAN_v1.2.md  TRANSFER_README.md
scripts/: apply_db_schema.sh  bind-observability-assets.py  bootstrap_admin.py  import-observability-assets.sh  migration-safety-gate.sh  mock_supabase_auth.py  mvp-smoke-staging.sh  mvp-smoke.sh  reset_db.sh  validate-telemetry-quality.sh
web/: .gcloudignore  next-env.d.ts  package.json  playwright.config.ts  playwright.live.config.ts  pnpm-lock.yaml  tsconfig.json
web-vanilla/: README.md  app.css  app.js  index.html
workers/: pyproject.toml
workers/app/: main.py
workers/app/core/: config.py  telemetry.py  urls.py
workers/app/jobs/: executor.py  freshness.py  lease_reaper.py  redirects.py
workers/app/services/: job_client.py
workers/sloppy_jobulator_workers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/tests/: test_executor.py  test_freshness.py  test_lease_reaper.py  test_redirects.py
(+72 files in other folders)
