[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sloppy-jobulator-workers"
version = "0.1.0"
description = "Worker runtime for Sloppy Jobulator jobs"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-exporter-otlp-proto-http>=1.28.0",
  "opentelemetry-instrumentation-httpx>=0.49b0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
